# SPIE-Automobility-Study

./: CMakeLists.txt  README.md
apps/: 01_eigen_tester.cpp  02_csv_points_rotation.cpp  03_icp_nearest_neighbor.cpp  03_scan_matching.cpp
data/: rectangle_points10.csv  rectangle_points10_rotated.csv
include/scan_matching/: csv_reader.hpp  icp.hpp
scan_matching/: CMakeLists.txt
scan_matching/apps/: 01_eigen_tester.cpp
scripts/: plot_point.py
src/: csv_reader.cpp  icp.cpp
